frontend/src/components/styles/inputs.css
.input {
	height: 10px;
	width: 280px;
	background: var(--tertiary);
	border: var(--primary) 2px solid;
	border-radius: 5px;
	font-size: 20px;
	font-family: "Times New Roman", serif;
	letter-spacing: 3px;
	font-weight: 500;
	margin: 20px 0 0 0;
	padding: 10px;
}

.password-input {
	height: 10px;
	width: 280px;
	background: var(--tertiary);
	border-top: var(--primary) 2px solid;
	border-bottom: var(--primary) 2px solid;
	border-left: var(--primary) 2px solid;
	border-right: var(--primary) 0px solid;
	font-size: 20px;
	font-family: "Times New Roman", serif;
	letter-spacing: 3px;
	font-weight: 500;
	margin: 20px 0 0 0;
	padding: 10px;
	border-bottom-left-radius: 5px;
	border-top-left-radius: 5px;
}

.input::placeholder {
	color: var(--background);
}	

.input:focus {
	color: var(--primary);
}

.password-input::placeholder {
	color: var(--background);
}	

.password-input:focus {
	color: var(--primary);
}

.above-p {
	animation: slideUp 0.3s ease-out forwards;
	font-family: "Tahoma", sans-serif;
	font-size: 20px;
	font-weight: 600;
	color: var(--secondary);
	justify-self: left;
	margin: 20px 0 -15px 0;
}

@keyframes slideUp {
  from {
    opacity: 0;
    transform: translateY(20px);
  }
  to {
    opacity: 1;
    transform: translateY(0);
  }
}

.password-button {
	border-top: var(--primary) 2px solid;
	border-bottom: var(--primary) 2px solid;
	border-left: var(--primary) 0px solid;
	border-right: var(--primary) 2px solid;
	color: var(--background);
	background: var(--tertiary);
	border-bottom-right-radius: 5px;
	border-top-right-radius: 5px;
	height: 34px;
	min-width: 50px;
	max-width: 50px;
	margin: 20px 0 0 -1px;
}

.password-button-inactive {
	border-top: var(--primary) 2px solid;
	border-bottom: var(--primary) 2px solid;
	border-left: var(--primary) 0px solid;
	border-right: var(--primary) 2px solid;
	color: grey;
	background: var(--tertiary);
	border-bottom-right-radius: 5px;
	border-top-right-radius: 5px;
	height: 34px;
	min-width: 50px;
	max-width: 50px;
	margin: 20px 0 0 -1px;
}

